; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000e/extr_phy.c_e1000_copper_link_setup_82577.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000e/extr_phy.c_e1000_copper_link_setup_82577.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_hw = type { i32 }

@I82577_CFG_REG = common dso_local global i32 0, align 4
@I82577_CFG_ASSERT_CRS_ON_TX = common dso_local global i32 0, align 4
@I82577_CFG_ENABLE_DOWNSHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @e1000_copper_link_setup_82577(%struct.e1000_hw* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.e1000_hw*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.e1000_hw* %0, %struct.e1000_hw** %3, align 8
  %6 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %7 = load i32, i32* @I82577_CFG_REG, align 4
  %8 = call i64 @e1e_rphy(%struct.e1000_hw* %6, i32 %7, i32* %5)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i64, i64* %4, align 8
  store i64 %12, i64* %2, align 8
  br label %31

13:                                               ; preds = %1
  %14 = load i32, i32* @I82577_CFG_ASSERT_CRS_ON_TX, align 4
  %15 = load i32, i32* %5, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* @I82577_CFG_ENABLE_DOWNSHIFT, align 4
  %18 = load i32, i32* %5, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %5, align 4
  %20 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %21 = load i32, i32* @I82577_CFG_REG, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i64 @e1e_wphy(%struct.e1000_hw* %20, i32 %21, i32 %22)
  store i64 %23, i64* %4, align 8
  %24 = load i64, i64* %4, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %13
  %27 = load i64, i64* %4, align 8
  store i64 %27, i64* %2, align 8
  br label %31

28:                                               ; preds = %13
  %29 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %30 = call i64 @e1000_set_master_slave_mode(%struct.e1000_hw* %29)
  store i64 %30, i64* %2, align 8
  br label %31

31:                                               ; preds = %28, %26, %11
  %32 = load i64, i64* %2, align 8
  ret i64 %32
}

declare dso_local i64 @e1e_rphy(%struct.e1000_hw*, i32, i32*) #1

declare dso_local i64 @e1e_wphy(%struct.e1000_hw*, i32, i32) #1

declare dso_local i64 @e1000_set_master_slave_mode(%struct.e1000_hw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
